--- a/Project/1. Palindrome Checker/index.html
+++ b/Project/1. Palindrome Checker/index.html
@@ -4,20 +4,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="description" content="Palindrome Web App">
+  <meta name="CCBot" content="nofollow">
   <title>Palindrome Checker</title>
 
   <link rel="stylesheet" href="style.css">
+
+  <link rel="icon" href="icon.svg">
 </head>
 
 <body>
-  <h1>Palindrome Checker</h1>
-
-  <label for="text-input">Enter text:</label>
-  <input type="text" id="text-input" placeholder="Enter text">
-
-  <button id="check-btn" onclick="checkPalindrome()">Check Palindrome</button>
-
-  <div id="result"></div>
+  <div id="converter-container">
+    <label for="text-input">Palindrome Checker Text</label>
+    <br>
+    <br>
+    <input type="text" id="text-input" placeholder="Your Text">
+    <br>
+    <button id="check-btn" onclick="checkPalindrome()">Check</button>
+    <div id="result"></div>
+  </div>
 
   <script src="script.js"></script>
 </body>
