--- a/Project/2. Roman Numeral Converter/index.html
+++ b/Project/2. Roman Numeral Converter/index.html
@@ -4,9 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="description" content="Roman Converter Web App">
+  <meta name="CCBot" content="nofollow">
   <title>Roman Numeral Converter</title>
 
   <link rel="stylesheet" href="style.css">
+
+  <link rel="icon" href="icon.svg">
 </head>
 
 <body>
@@ -14,11 +19,13 @@
     <label for="number">Enter a Number</label>
     <br>
     <br>
-    <input type="number" id="number">
+    <input type="number" id="number" placeholder="1" max="3999">
+    <br>
     <button id="convert-btn">Convert</button>
     <div id="output"></div>
+  </div>
 
-    <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
